--- a/美国对外侵略.md
+++ b/美国对外侵略.md
@@ -1,4 +1,4 @@
-#美国对外侵略战争造成严重人道主义灾难
+# 美国对外侵略战争造成严重人道主义灾难
 
 中国人权研究会
 
@@ -6,7 +6,7 @@
 
 美国一直自诩为“山巅之城”，支持“天赋人权”，肩负“天赋使命”，时常打着“人道主义干涉”的旗号对外动武。自1776年7月4日宣布独立以来，在240多年的历史中，美国没有参与战争的时间不足20年。据不完全统计，从1945年第二次世界大战结束到2001年，世界上153个地区发生了248次武装冲突，其中美国发起的就有201场，约占81%。美国发动的多数侵略战争都是单边主义行动，甚至还遭致其盟友的反对。这些战争不仅夺去了大量各方军人的生命，更造成了极为严重的平民伤亡和财产损失，导致惊人的人道主义灾难。美国的自私和虚伪也通过这些对外干涉行为表露无遗。
 
-#一、二战后美国发动的主要侵略战争
+## 一、二战后美国发动的主要侵略战争
 
 1.朝鲜战争。发生于20世纪50年代初的朝鲜战争时间虽短但异常血腥，战争导致300多万名平民死亡，另有约300万人成为难民。根据朝方的统计，战争摧毁了约8700座工厂、5000所学校、1000家医院和60万户家庭，有200万18岁以下的儿童因战争流离失所。而韩方的损失高达412.3亿韩元，相当于官方汇率下的69亿美元；战争期间韩方约有60万套住房、46.9%的铁路、1656条公路、1453座桥梁被毁。此外，战争导致的南北分治还造成大量家庭分离。在韩国统一部登记有离散家属的韩国人约为13万人，其中7.5万人已经离世。美国《外交官》杂志网站2020年6月25日报道，截至2019年11月，韩国分裂家庭成员的平均年龄为81岁，自1988年以来133370名申请团聚者中的60%以上已经去世，他们中的绝大部分人在分离后就再也没见过自己的亲人。
 
@@ -24,7 +24,7 @@
 
 此外，美国还以支持代理人战争、煽动国内叛乱、暗杀、提供武器弹药、培训反政府武装等直接或间接方式频频对其他国家进行干涉，给相关国家社会安定和民众安全带来严重伤害。由于大量此类事件属美国政府暗中操弄，其造成的具体破坏后果难以统计。
 
-#二、美国发动战争的恶果
+## 二、美国发动战争的恶果
 
 二战以来，几乎所有美国总统在任内都曾发动或介入过对外战争，战争理由包括“阻止共产主义蔓延”、“维护正义”、“制止侵略”、“人道主义干预”、打击恐怖主义、防止“大规模杀伤性武器”扩散、保护美国侨民安全，等等。其中，只有一次是针对美国本土直接遭受恐怖主义袭击后所做出的反击，其他都是在与美国切身利益没有直接关联的背景下主动对外动武的。即使这唯一的一次“正当防卫”也明显属于防卫过当：在“消除基地组织威胁”的旗号下，美军本着“宁可错杀、不可漏杀”的原则，在反恐战争中随意扩大打击范围，造成大量当地平民死伤；即便美军声称使用了“相对精确”的无人机攻击，滥杀无辜的现象仍屡屡发生。
 
@@ -40,7 +40,7 @@
 
 ——美国自身也成为其对外发动战争的牺牲品。根据美国退伍军人事务部的统计，美军在朝鲜战争和越南战争中的身体受伤人员分别高达103284人和153303人。2001年至2005年，从伊拉克和阿富汗战争中返回的103788名退伍军人中，约有三分之一被诊断出患有精神或心理疾病，56%的确诊者患有一种以上的疾病。美国国会研究局的研究显示，2008年至2016年，每年有超过6000名退伍军人自杀。美军给参加过朝鲜战争的老兵及其家庭的补偿每年达28亿美元，给参加过越南战争的老兵及其家庭的补偿每年超过220亿美元，为参加过阿富汗战争的退伍军人支付的医疗和伤残护理费已超过1700亿美元。《商业内幕》网站2019年12月报道，阿富汗战争爆发以来，估计有超过3800名美国平民承包商死亡，这远远超过政府统计数字，甚至超过美军死亡人数。
 
-三、人道主义危机源于美国的霸权思维
+## 三、人道主义危机源于美国的霸权思维
 
 纵观美国对外发动的多次侵略战争，可以看出其军事行动导致人道主义危机的案例不在少数。在当前战火未熄的阿富汗、伊拉克、叙利亚等国，“误炸误伤”频频发生，难民漂泊无处落脚，基础设施千疮百孔，国民生产停滞不前。美国在国外发起的战争，往往打着“人权高于主权”“人道主义干预”等旗号，为何最终演变为人道主义灾难呢？
 
@@ -58,95 +58,95 @@
 
 归根结底，动辄以单边战争手段来解决争端的思维模式，本身就存在问题。人道主义与霸权主义存在内在的对立，期待霸权主义国家去捍卫他国人权无异于与虎谋皮。国际争端的解决要靠在联合国框架下的平等协商，要靠规范完善的国际机制来协调，要靠构建人类命运共同体来推进。只有丢弃私利至上的霸权思维，才能避免“人道主义干预”变成人道主义灾难，才能实现互利共赢，才能使各国人民都能真正享有各项基本人权。
 
-#附：1、二战以来美国主要对外侵略战争造成平民伤亡等情况一览表
+## 附：1、二战以来美国主要对外侵略战争造成平民伤亡等情况一览表
 
-朝鲜战争：平民死亡300万人，难民300万人；
-越南战争：平民死亡200万人，难民300万人，落叶剂受害者300万人；
-空袭利比亚：军民死亡700人；
-入侵巴拿马：平民死亡302人，受伤3000人；
-出兵索马里：平民死亡200人，受伤300人；
-海湾战争：战争致死平民12万人，制裁致死200万人，经济损失6000亿美元；
-科索沃战争：战争致死2000多人，致伤6000人，经济损失2000亿美元；
-阿富汗战争：平民死亡超过3万人，受伤7万人，难民1100万人；
-伊拉克战争：平民死亡20万至25万人，难民325万人；
-叙利亚战争：平民死亡超过4万人，1259万人逃离家园。
++ 朝鲜战争：平民死亡300万人，难民300万人；
++ 越南战争：平民死亡200万人，难民300万人，落叶剂受害者300万人；
++ 空袭利比亚：军民死亡700人；
++ 入侵巴拿马：平民死亡302人，受伤3000人；
++ 出兵索马里：平民死亡200人，受伤300人；
++ 海湾战争：战争致死平民12万人，制裁致死200万人，经济损失6000亿美元；
++ 科索沃战争：战争致死2000多人，致伤6000人，经济损失2000亿美元；
++ 阿富汗战争：平民死亡超过3万人，受伤7万人，难民1100万人；
++ 伊拉克战争：平民死亡20万至25万人，难民325万人；
++ 叙利亚战争：平民死亡超过4万人，1259万人逃离家园。
 
-#附：2、二战以来美国侵略战争和对外干涉一览表
+## 附：2、二战以来美国侵略战争和对外干涉一览表
 
-1947－1949：干涉希腊内战
-1947－1970：干涉意大利选举，支持反共力量
-1948：在哥斯达黎加内战中支持反政府武装
-1949－1953：支持阿尔巴尼亚反共活动
-1949：干涉叙利亚政府更迭
-1950－1953：发动朝鲜战争
-1952：干涉埃及革命
-1953：支持伊朗政变推翻政府
-1954：支持危地马拉政府更迭
-1956－1957：密谋叙利亚政变
-1957－1959：支持印度尼西亚政变
-1958：制造黎巴嫩危机
-1960－1961：支持刚果政变
-1960：阻止老挝政府改革
-1961：支持入侵古巴的猪湾行动
-1961－1975：支持老挝内战和鸦片贸易
-1961－1964：支持巴西的反政府活动
-1963：支持伊拉克内乱
-1963：支持厄瓜多尔叛乱
-1963－1975：参加越南战争
-1964：干涉刚果辛巴叛乱
-1965－1966：干涉多米尼加内战
-1965－1967：支持印度尼西亚军政府对共产党人的大屠杀
-1966：支持加纳国内叛乱
-1966－1969：在朝鲜非军事区制造冲突
-1966－1967：支持玻利维亚叛乱
-1967：干涉希腊政府更迭
-1967－1975：干涉柬埔寨内战
-1970：干涉阿曼内政
-1970－1973：支持智利军事政变
-1970－1973：支持柬埔寨政变
-1971：支持玻利维亚政变
-1972－1975：援助伊拉克反政府武装
-1976：支持阿根廷政变
-1976－1992：干涉安哥拉内政
-1977－1988：支持巴基斯坦政变
-1979－1993：支持柬埔寨反政府武装
-1979－1989：干涉阿富汗战争
-1980－1989：资助波兰团结工会反对政府
-1980－1992：干涉萨尔瓦多内战
-1981：在锡德拉湾与利比亚对抗
-1981－1982：推动乍得政府更迭
-1982－1984：参与多边干涉黎巴嫩
-1982－1989：支持尼加拉瓜反政府武装
-1983：入侵格林纳达
-1986：侵入利比亚锡德拉湾
-1986：轰炸利比亚
-1988：击落伊朗民航客机
-1988：出兵洪都拉斯
-1989：与利比亚在托布鲁克对峙
-1989：干涉菲律宾内政
-1989－1990：入侵巴拿马
-1990－1991：发动海湾战争
-1991：干涉海地选举
-1991－2003：主导伊拉克禁飞区强制行动
-1992－1995：首次干涉索马里内战
-1992－1995：干涉波斯尼亚战争
-1994－1995：出兵海地
-1996：支持伊拉克政变
-1997：出兵阿尔巴尼亚
-1997：出兵塞拉利昂
-1998－1999：发动科索沃战争
-1998：用巡航导弹攻击苏丹和阿富汗
-1998－1999：出兵肯尼亚和坦桑尼亚
-2001－现在：发动阿富汗战争
-2002：出兵科特迪瓦
-2003－2011：发动伊拉克战争
-2004－现在：发动巴基斯坦与阿富汗接壤地区的战争
-2006－2007：支持巴勒斯坦法塔赫推翻民选政府哈马斯的行动
-2007－现在：第二次干涉索马里内战
-2009：支持洪都拉斯政变
-2011：支持利比亚反政府武装
-2011－2017：开展在乌干达的军事行动
-2014－现在：美国领导的伊拉克干涉行动
-2014－现在：美国领导的叙利亚干涉行动
-2015－现在：支持沙特参与也门内战
-2019：支持委内瑞拉政府更迭
++ 1947－1949：干涉希腊内战
++ 1947－1970：干涉意大利选举，支持反共力量
++ 1948：在哥斯达黎加内战中支持反政府武装
++ 1949－1953：支持阿尔巴尼亚反共活动
++ 1949：干涉叙利亚政府更迭
++ 1950－1953：发动朝鲜战争
++ 1952：干涉埃及革命
++ 1953：支持伊朗政变推翻政府
++ 1954：支持危地马拉政府更迭
++ 1956－1957：密谋叙利亚政变
++ 1957－1959：支持印度尼西亚政变
++ 1958：制造黎巴嫩危机
++ 1960－1961：支持刚果政变
++ 1960：阻止老挝政府改革
++ 1961：支持入侵古巴的猪湾行动
++ 1961－1975：支持老挝内战和鸦片贸易
++ 1961－1964：支持巴西的反政府活动
++ 1963：支持伊拉克内乱
++ 1963：支持厄瓜多尔叛乱
++ 1963－1975：参加越南战争
++ 1964：干涉刚果辛巴叛乱
++ 1965－1966：干涉多米尼加内战
++ 1965－1967：支持印度尼西亚军政府对共产党人的大屠杀
++ 1966：支持加纳国内叛乱
++ 1966－1969：在朝鲜非军事区制造冲突
++ 1966－1967：支持玻利维亚叛乱
++ 1967：干涉希腊政府更迭
++ 1967－1975：干涉柬埔寨内战
++ 1970：干涉阿曼内政
++ 1970－1973：支持智利军事政变
++ 1970－1973：支持柬埔寨政变
++ 1971：支持玻利维亚政变
++ 1972－1975：援助伊拉克反政府武装
++ 1976：支持阿根廷政变
++ 1976－1992：干涉安哥拉内政
++ 1977－1988：支持巴基斯坦政变
++ 1979－1993：支持柬埔寨反政府武装
++ 1979－1989：干涉阿富汗战争
++ 1980－1989：资助波兰团结工会反对政府
++ 1980－1992：干涉萨尔瓦多内战
++ 1981：在锡德拉湾与利比亚对抗
++ 1981－1982：推动乍得政府更迭
++ 1982－1984：参与多边干涉黎巴嫩
++ 1982－1989：支持尼加拉瓜反政府武装
++ 1983：入侵格林纳达
++ 1986：侵入利比亚锡德拉湾
++ 1986：轰炸利比亚
++ 1988：击落伊朗民航客机
++ 1988：出兵洪都拉斯
++ 1989：与利比亚在托布鲁克对峙
++ 1989：干涉菲律宾内政
++ 1989－1990：入侵巴拿马
++ 1990－1991：发动海湾战争
++ 1991：干涉海地选举
++ 1991－2003：主导伊拉克禁飞区强制行动
++ 1992－1995：首次干涉索马里内战
++ 1992－1995：干涉波斯尼亚战争
++ 1994－1995：出兵海地
++ 1996：支持伊拉克政变
++ 1997：出兵阿尔巴尼亚
++ 1997：出兵塞拉利昂
++ 1998－1999：发动科索沃战争
++ 1998：用巡航导弹攻击苏丹和阿富汗
++ 1998－1999：出兵肯尼亚和坦桑尼亚
++ 2001－现在：发动阿富汗战争
++ 2002：出兵科特迪瓦
++ 2003－2011：发动伊拉克战争
++ 2004－现在：发动巴基斯坦与阿富汗接壤地区的战争
++ 2006－2007：支持巴勒斯坦法塔赫推翻民选政府哈马斯的行动
++ 2007－现在：第二次干涉索马里内战
++ 2009：支持洪都拉斯政变
++ 2011：支持利比亚反政府武装
++ 2011－2017：开展在乌干达的军事行动
++ 2014－现在：美国领导的伊拉克干涉行动
++ 2014－现在：美国领导的叙利亚干涉行动
++ 2015－现在：支持沙特参与也门内战
++ 2019：支持委内瑞拉政府更迭
