--- a/美国对外侵略.md
+++ b/美国对外侵略.md
@@ -4,9 +4,7 @@
 
 2021年4月
 
-```
-美国一直自诩为“山巅之城”，支持“天赋人权”，肩负“天赋使命”，时常打着“人道主义干涉”的旗号对外动武。自1776年7月4日宣布独立以来，在240多年的历史中，美国没有参与战争的时间不足20年。据不完全统计，从1945年第二次世界大战结束到2001年，世界上153个地区发生了248次武装冲突，其中美国发起的就有201场，约占81%。美国发动的多数侵略战争都是单边主义行动，甚至还遭致其盟友的反对。这些战争不仅夺去了大量各方军人的生命，更造成了极为严重的平民伤亡和财产损失，导致惊人的人道主义灾难。美国的自私和虚伪也通过这些对外干涉行为表露无遗。
-```
+### 美国一直自诩为“山巅之城”，支持“天赋人权”，肩负“天赋使命”，时常打着“人道主义干涉”的旗号对外动武。自1776年7月4日宣布独立以来，在240多年的历史中，美国没有参与战争的时间不足20年。据不完全统计，从1945年第二次世界大战结束到2001年，世界上153个地区发生了248次武装冲突，其中美国发起的就有201场，约占81%。美国发动的多数侵略战争都是单边主义行动，甚至还遭致其盟友的反对。这些战争不仅夺去了大量各方军人的生命，更造成了极为严重的平民伤亡和财产损失，导致惊人的人道主义灾难。美国的自私和虚伪也通过这些对外干涉行为表露无遗。
 
 ## 一、二战后美国发动的主要侵略战争
 
@@ -34,13 +32,13 @@
 
 从后果来看，美国发动的对外战争，引发了各种各样的地区和国际危机。
 
-— 战争直接导致了当事国的人道主义灾难，包括人员伤亡、设施破坏、生产停滞，尤其是造成大量无辜平民伤亡。在战火蔓延到的区域，人们死于家里、市场中、道路上，死于炸弹、子弹、简易爆炸装置、无人机，死于美军的空袭、政府军的扫荡、恐怖和极端组织的屠杀以及国内的暴乱。根据美国布朗大学2018年11月发布的研究报告，在阿富汗、巴基斯坦、伊拉克、叙利亚和也门因战乱致死的平民分别有43074人、23924人、184382－207156人、49591人、12000人，殉职的记者和媒体人员分别有67人、8人、277人、75人、31人，殉职的人道主义救援人员分别有424人、97人、63人、185人、38人。人员伤亡往往还会被美国政府轻描淡写。美国“截击”网站2018年11月19日报道，伊拉克平民的实际死亡人数远超美国军方正式报告的数字。
+* 战争直接导致了当事国的人道主义灾难，包括人员伤亡、设施破坏、生产停滞，尤其是造成大量无辜平民伤亡。在战火蔓延到的区域，人们死于家里、市场中、道路上，死于炸弹、子弹、简易爆炸装置、无人机，死于美军的空袭、政府军的扫荡、恐怖和极端组织的屠杀以及国内的暴乱。根据美国布朗大学2018年11月发布的研究报告，在阿富汗、巴基斯坦、伊拉克、叙利亚和也门因战乱致死的平民分别有43074人、23924人、184382－207156人、49591人、12000人，殉职的记者和媒体人员分别有67人、8人、277人、75人、31人，殉职的人道主义救援人员分别有424人、97人、63人、185人、38人。人员伤亡往往还会被美国政府轻描淡写。美国“截击”网站2018年11月19日报道，伊拉克平民的实际死亡人数远超美国军方正式报告的数字。
 
-— 战争带来一系列复杂的社会问题，包括难民潮、社会动荡、生态危机、心理创伤等。据统计，近年来美军介入的几场战争导致难民数量居高不下，如阿富汗有1100万人，巴基斯坦有38万人，伊拉克有325万人，叙利亚有1259万人。这些难民被迫远离家园，阿富汗难民中约130万人流落到巴基斯坦，约90万人流落到伊朗；伊拉克、叙利亚难民中约350万人流落到土耳其，约100万人流落到伊朗。在阿富汗、伊拉克和巴基斯坦，由于缺医少药、营养不良和环境污染导致的人员死伤远超因战争直接伤亡的人数。据估计，非战争直接原因致死者的数量是战争直接致死人数的4倍。伊拉克巴士拉每公斤土壤的铀含量从1991年前的低于70贝克勒尔，暴升至2009年的10000贝克勒尔，在战争物资遗留地区更是高达36205贝克勒尔。英国《卫报》网站2016年8月22日报道，伊拉克2010年有先天缺陷的婴儿出生率高达30%，而正常情况下这一数据仅为2%至4%。
+* 战争带来一系列复杂的社会问题，包括难民潮、社会动荡、生态危机、心理创伤等。据统计，近年来美军介入的几场战争导致难民数量居高不下，如阿富汗有1100万人，巴基斯坦有38万人，伊拉克有325万人，叙利亚有1259万人。这些难民被迫远离家园，阿富汗难民中约130万人流落到巴基斯坦，约90万人流落到伊朗；伊拉克、叙利亚难民中约350万人流落到土耳其，约100万人流落到伊朗。在阿富汗、伊拉克和巴基斯坦，由于缺医少药、营养不良和环境污染导致的人员死伤远超因战争直接伤亡的人数。据估计，非战争直接原因致死者的数量是战争直接致死人数的4倍。伊拉克巴士拉每公斤土壤的铀含量从1991年前的低于70贝克勒尔，暴升至2009年的10000贝克勒尔，在战争物资遗留地区更是高达36205贝克勒尔。英国《卫报》网站2016年8月22日报道，伊拉克2010年有先天缺陷的婴儿出生率高达30%，而正常情况下这一数据仅为2%至4%。
 
-— 美国发动的战争还产生了外溢效应，给未涉事国家造成伤害。例如，在越南战争中，美军以阻断“胡志明小道”为名，将战火蔓延到临近的柬埔寨和老挝等国，导致50万名以上的无辜平民死伤，并遗留下大量未爆弹药。在阿富汗战争中，美军飞机和无人机在打击恐怖分子时，时常将炸弹投向邻近的巴基斯坦村寨伤及无辜，甚至迎新的婚车和巴基斯坦边防军士兵都未能幸免。在对南联盟的持续空袭中，美军还将中国大使馆作为轰炸目标，导致3名中国记者死亡，十几人受伤。
+* 美国发动的战争还产生了外溢效应，给未涉事国家造成伤害。例如，在越南战争中，美军以阻断“胡志明小道”为名，将战火蔓延到临近的柬埔寨和老挝等国，导致50万名以上的无辜平民死伤，并遗留下大量未爆弹药。在阿富汗战争中，美军飞机和无人机在打击恐怖分子时，时常将炸弹投向邻近的巴基斯坦村寨伤及无辜，甚至迎新的婚车和巴基斯坦边防军士兵都未能幸免。在对南联盟的持续空袭中，美军还将中国大使馆作为轰炸目标，导致3名中国记者死亡，十几人受伤。
 
-— 美国自身也成为其对外发动战争的牺牲品。根据美国退伍军人事务部的统计，美军在朝鲜战争和越南战争中的身体受伤人员分别高达103284人和153303人。2001年至2005年，从伊拉克和阿富汗战争中返回的103788名退伍军人中，约有三分之一被诊断出患有精神或心理疾病，56%的确诊者患有一种以上的疾病。美国国会研究局的研究显示，2008年至2016年，每年有超过6000名退伍军人自杀。美军给参加过朝鲜战争的老兵及其家庭的补偿每年达28亿美元，给参加过越南战争的老兵及其家庭的补偿每年超过220亿美元，为参加过阿富汗战争的退伍军人支付的医疗和伤残护理费已超过1700亿美元。《商业内幕》网站2019年12月报道，阿富汗战争爆发以来，估计有超过3800名美国平民承包商死亡，这远远超过政府统计数字，甚至超过美军死亡人数。
+* 美国自身也成为其对外发动战争的牺牲品。根据美国退伍军人事务部的统计，美军在朝鲜战争和越南战争中的身体受伤人员分别高达103284人和153303人。2001年至2005年，从伊拉克和阿富汗战争中返回的103788名退伍军人中，约有三分之一被诊断出患有精神或心理疾病，56%的确诊者患有一种以上的疾病。美国国会研究局的研究显示，2008年至2016年，每年有超过6000名退伍军人自杀。美军给参加过朝鲜战争的老兵及其家庭的补偿每年达28亿美元，给参加过越南战争的老兵及其家庭的补偿每年超过220亿美元，为参加过阿富汗战争的退伍军人支付的医疗和伤残护理费已超过1700亿美元。《商业内幕》网站2019年12月报道，阿富汗战争爆发以来，估计有超过3800名美国平民承包商死亡，这远远超过政府统计数字，甚至超过美军死亡人数。
 
 ## 三、人道主义危机源于美国的霸权思维
 
