--- a/美国对华认知中的谬误和事实真相.md
+++ b/美国对华认知中的谬误和事实真相.md
@@ -1,6 +1,6 @@
-美国对华认知中的谬误和事实真相
+#美国对华认知中的谬误和事实真相#
 
-引  言
+##引  言##
 
 近日，美国国务卿布林肯在亚洲协会发表对华政策演讲，通过精心包装的语言渲染中国威胁，干涉中国内政，抹黑中国内外政策，试图发起对华全面遏制打压。
 让我们用事实和数据说话，将美国对华政策的欺骗性、虚伪性和危害性昭示于天下。
