--- a/美国对华认知中的谬误和事实真相.md
+++ b/美国对华认知中的谬误和事实真相.md
@@ -1,17 +1,17 @@
-#美国对华认知中的谬误和事实真相#
+# 美国对华认知中的谬误和事实真相
 
-##引  言##
+## 引  言
 
 近日，美国国务卿布林肯在亚洲协会发表对华政策演讲，通过精心包装的语言渲染中国威胁，干涉中国内政，抹黑中国内外政策，试图发起对华全面遏制打压。
 让我们用事实和数据说话，将美国对华政策的欺骗性、虚伪性和危害性昭示于天下。
 
-谬误1：中国对国际秩序构成最严峻长期挑战，正在破坏国际秩序。美国将捍卫国际法、协议、原则和机构以维护世界和平与安全，保护个人和国家的权利。
-事实真相：美国口口声声讲的国际秩序，实际上是服务美国自身利益、维护美国霸权地位的秩序。美国是世界秩序的最大乱源。
+## 谬误1：中国对国际秩序构成最严峻长期挑战，正在破坏国际秩序。美国将捍卫国际法、协议、原则和机构以维护世界和平与安全，保护个人和国家的权利。
+## 事实真相：美国口口声声讲的国际秩序，实际上是服务美国自身利益、维护美国霸权地位的秩序。美国是世界秩序的最大乱源。
 
-◆中国过去、现在和将来都是国际秩序的维护者。中国是联合国创始会员国，是第一个在联合国宪章上签字的国家。中国始终维护以联合国为核心的国际体系、以国际法为基础的国际秩序、以联合国宪章宗旨和原则为基础的国际关系基本准则。中国、印度、缅甸三国共同倡导的和平共处五项原则获得国际社会广泛认同，成为指导国与国关系的基本准则。
+### ◆ 中国过去、现在和将来都是国际秩序的维护者。中国是联合国创始会员国，是第一个在联合国宪章上签字的国家。中国始终维护以联合国为核心的国际体系、以国际法为基础的国际秩序、以联合国宪章宗旨和原则为基础的国际关系基本准则。中国、印度、缅甸三国共同倡导的和平共处五项原则获得国际社会广泛认同，成为指导国与国关系的基本准则。
 中国坚持真正的多边主义，维护全球战略稳定。中国是安理会常任理事国中派遣维和人员最多的国家和联合国第二大维和摊款国。中国积极参与国际军控、裁军和防扩散进程，已签署或加入包括《不扩散核武器条约》《武器贸易条约》在内20多个多边军控、裁军和防扩散条约，反对军备竞赛。
 2008年国际金融危机发生后，中国采取负责任的宏观经济政策，成为世界经济“稳定器”，为拉动全球复苏作出重要贡献。中国积极为各国提供国际公共产品，已同149个国家和32个国际组织签署了共建“一带一路”协议。
-◆近年来，习近平主席提出的构建人类命运共同体理念在国际社会引起热烈反响，多次被写入联合国、上海合作组织等多边机制重要文件。联合国秘书长古特雷斯表示，中国已成为多边主义的重要支柱，而我们践行多边主义的目的，就是要建立人类命运共同体。第七十一届联大主席汤姆森表示，中国所倡导的构建人类命运共同体理念，是“人类在这个星球上的唯一未来”。
+### ◆ 近年来，习近平主席提出的构建人类命运共同体理念在国际社会引起热烈反响，多次被写入联合国、上海合作组织等多边机制重要文件。联合国秘书长古特雷斯表示，中国已成为多边主义的重要支柱，而我们践行多边主义的目的，就是要建立人类命运共同体。第七十一届联大主席汤姆森表示，中国所倡导的构建人类命运共同体理念，是“人类在这个星球上的唯一未来”。
 面对各种新的全球性挑战，习近平主席还先后提出全球发展倡议、全球安全倡议，为推动建立更加公正合理的全球治理体系提出了中国方案，得到国际社会积极响应和广泛支持。
 ◆美国公然违反《联合国宪章》宗旨和原则以及国际关系基本准则，倚靠强大军事实力四处发动战争，制造分裂冲突，给世界带来巨大动荡和灾难。美国在建国以来240多年历史中仅有16年没有打仗，堪称“世界历史上最好战的国家”。美国《国家利益》杂志援引美国传统基金会防务项目高级研究员达科塔·伍德的话说，美国平均每15年就卷入一场战争。
 二战结束以来，美国在海外发动或参与了朝鲜战争、越南战争、阿富汗战争、伊拉克战争等多场战争，造成极为严重的平民伤亡和财产损失，导致巨大的人道主义灾难。自2001年以来，美国以反恐之名发动的战争和军事行动已造成超过90万人死亡，其中约有33.5万是平民，数百万人受伤，数千万人流离失所。
