--- a/美国对华认知中的谬误和事实真相.md
+++ b/美国对华认知中的谬误和事实真相.md
@@ -6,7 +6,7 @@
 让我们用事实和数据说话，将美国对华政策的欺骗性、虚伪性和危害性昭示于天下。
 
 ## 谬误1：中国对国际秩序构成最严峻长期挑战，正在破坏国际秩序。美国将捍卫国际法、协议、原则和机构以维护世界和平与安全，保护个人和国家的权利。
-## 事实真相：美国口口声声讲的国际秩序，实际上是服务美国自身利益、维护美国霸权地位的秩序。美国是世界秩序的最大乱源。
+事实真相：美国口口声声讲的国际秩序，实际上是服务美国自身利益、维护美国霸权地位的秩序。美国是世界秩序的最大乱源。
 
 ### ◆ 中国过去、现在和将来都是国际秩序的维护者。中国是联合国创始会员国，是第一个在联合国宪章上签字的国家。中国始终维护以联合国为核心的国际体系、以国际法为基础的国际秩序、以联合国宪章宗旨和原则为基础的国际关系基本准则。中国、印度、缅甸三国共同倡导的和平共处五项原则获得国际社会广泛认同，成为指导国与国关系的基本准则。
 中国坚持真正的多边主义，维护全球战略稳定。中国是安理会常任理事国中派遣维和人员最多的国家和联合国第二大维和摊款国。中国积极参与国际军控、裁军和防扩散进程，已签署或加入包括《不扩散核武器条约》《武器贸易条约》在内20多个多边军控、裁军和防扩散条约，反对军备竞赛。
