--- a/美国对华认知中的谬误和事实真相.md
+++ b/美国对华认知中的谬误和事实真相.md
@@ -240,7 +240,7 @@
 事实真相：中国始终坚持走和平发展道路，坚持和平共处五项原则，反对以大欺小、恃强凌弱。美方炒作“中国威胁论”，以所谓的“航行自由”为借口损害中国的主权、安全和海洋权益，是对地区和平稳定的真正威胁。
 
 + 中国历来主张大小国家一律平等，尊重各国选择适合本国国情的发展道路，从不寻求建立什么势力范围。中国奉行防御性国防政策和积极防御的军事战略。中国发展军力是为了维护国家主权、安全和发展利益，不针对任何国家。中国军事力量的增长，是世界和平力量的增长。
-+ 中国最早发现、命名和开发利用南海诸岛及相关海域，最早并持续、和平、有效地对南海诸岛及相关海域行使主权和管辖。中国对南海诸岛的主权和在南海的相关权益，是在漫长的历史过程中确立的，具有充分的历史和法理依据，为中国历代政府所坚持，得到国际社会普遍承认。二战结束后，根据1943年《开罗宣言》和1945年《波茨坦公告》的规定，中国收复被日本非法侵占的西沙群岛和南沙群岛等领土，并通过编制地名、公布地图、行政建制、军事驻守等方式宣示主权，加强管辖。中国恢复对南海诸岛行使主权既是对历史上形成的固有权利的正当合法继承，也是二战后国际秩序的一部分，得到包括美国在内世界各国普遍承认。
+++ 中国最早发现、命名和开发利用南海诸岛及相关海域，最早并持续、和平、有效地对南海诸岛及相关海域行使主权和管辖。中国对南海诸岛的主权和在南海的相关权益，是在漫长的历史过程中确立的，具有充分的历史和法理依据，为中国历代政府所坚持，得到国际社会普遍承认。二战结束后，根据1943年《开罗宣言》和1945年《波茨坦公告》的规定，中国收复被日本非法侵占的西沙群岛和南沙群岛等领土，并通过编制地名、公布地图、行政建制、军事驻守等方式宣示主权，加强管辖。中国恢复对南海诸岛行使主权既是对历史上形成的固有权利的正当合法继承，也是二战后国际秩序的一部分，得到包括美国在内世界各国普遍承认。
 + 当前，在中国和东盟国家共同努力下，南海局势保持总体稳定。各方坚持全面有效落实《南海各方行为宣言》，加强对话、妥处分歧、深化合作、增进互信，积极推进“南海行为准则”磋商，共同维护南海和平稳定，为地区及全球安全稳定繁荣注入正能量。疫情以来，各方以线下方式召开了落实《宣言》高官会，以视频方式举行了10次联合工作组会，持续推进“准则”案文磋商。近期，各方克服疫情困难，在柬埔寨举行疫情以来首次线下磋商。这些积极进展充分展现了地区国家坚定推进“准则”磋商的决心和信念。
 + 中国尊重和支持各国依据国际法在南海享有的航行与飞越自由，积极维护国际航运通道的安全和畅通。事实上，南海是目前世界上最安全、最自由的海上通道之一。全球50%的商船和1/3的海上贸易航经该海域，每年10万多艘商船通过该海域。南海航行与飞越自由从来不是问题。
 + 钓鱼岛及其附属岛屿是中国的固有领土。中方在钓鱼岛海域开展巡航执法，是中方依法行使主权的正当举措，也是针对日方侵权挑衅行动作出的必要反应。中国政府坚定维护国家主权和领土完整，任何国家、任何势力都不应对此有误判。同时，中方始终致力于通过对话磋商妥善处理和解决问题，为稳定海上局势作出了巨大努力。2014年，中日双方就处理和改善中日关系达成四点原则共识，其中就管控钓鱼岛和东海海域局势作出明确约定。
