--- a/美国对华认知中的谬误和事实真相.md
+++ b/美国对华认知中的谬误和事实真相.md
@@ -380,9 +380,9 @@
 + 面对全球粮食危机，美国等主要产粮国反而捂紧“粮袋子”。美国农业部在2022年5月的供需报告中预测，2021至2022年度美国小麦出口量比上一年度减少18.9%。根据国际食品政策研究所（IFPRI）研究结果，俄乌冲突爆发后，全球受限食品贸易份额大大上升，目前受限比例已上涨至17%。
 + 美国粮食安全倡议虚多实少，反而导致全球粮食安全治理“碎片化”。俄罗斯是世界主要口粮出口国和最大化肥出口国。自美西方对俄制裁以来，全球各类化肥价格指数涨幅达30％以上，严重影响农业生产。2021至2022年俄罗斯小麦出口量占全球出口总量16％，大麦出口量占全球出口总量12.9％。联合国粮农组织数据显示，自美国发起对俄罗斯的制裁以来，2022年5月全球食品价格指数比2月上升14％。
 + 美国食物浪费问题严重，使全球粮食短缺现象雪上加霜。
-   一是浪费数量惊人。根据美国环境保护署数据，美国每年30%-40％食物被浪费，38％谷物被浪费。2018年美食物浪费总量达1.03亿吨，价值1610亿美元。2020年美人均食品浪费达59公斤。
-   二是分配不均衡。2020年美国约有3800万人口处于食物不安全状态，主要是非裔、拉丁美裔和美土著群体。根据《国家地理杂志》，美国政府出台补充营养援助计划（SNAP），但超过三分之一的最低收入家庭无法享受，补贴力度也没有达到许多美国高生活成本地区的家庭健康、充足饮食的标准。
-   三是次生问题突出。美国每年因食物生产过剩造成惊人的资源浪费和环境负担，包括1.4亿亩耕地、22万亿升水、3.5亿公斤农药、635万吨化肥。
++   一是浪费数量惊人。根据美国环境保护署数据，美国每年30%-40％食物被浪费，38％谷物被浪费。2018年美食物浪费总量达1.03亿吨，价值1610亿美元。2020年美人均食品浪费达59公斤。
++   二是分配不均衡。2020年美国约有3800万人口处于食物不安全状态，主要是非裔、拉丁美裔和美土著群体。根据《国家地理杂志》，美国政府出台补充营养援助计划（SNAP），但超过三分之一的最低收入家庭无法享受，补贴力度也没有达到许多美国高生活成本地区的家庭健康、充足饮食的标准。
++   三是次生问题突出。美国每年因食物生产过剩造成惊人的资源浪费和环境负担，包括1.4亿亩耕地、22万亿升水、3.5亿公斤农药、635万吨化肥。
 + 中国对世界粮食安全作出重大贡献。中国用不足全球9％的土地实现了约占世界四分之一的粮食产量，养活了世界五分之一的人口。同时，中国提出全球发展倡议，把粮食安全作为八大重点合作领域之一，将在全球范围内动员各方力量，推动优势互补，为实现包括粮食安全在内的所有可持续发展目标汇聚最大合力。该倡议已得到全球100多个国家和联合国等国际组织积极响应。
 + 中国人民珍惜粮食，一向奉行勤俭节约的传统美德。习近平主席高度重视粮食安全，提倡“厉行节约、反对浪费”的社会风尚，多次强调要制止餐饮浪费行为。自2013年全国开展“光盘行动”以来，“舌尖上的浪费”明显好转。根据《自然》杂志数据，目前中国餐饮机构倒掉食物数量减少40％。2021年，中国举办了国际粮食减损大会，得到包括20国集团成员在内的国际社会的积极响应。
 + 中国是联合国粮农组织南南合作的重要战略伙伴。近年来，中国累计向粮农组织南南合作基金捐款1.3亿美元。中国已向40多个国家和地区派出1100多名农业专家和技术人员，培养近10万名农户。中国是联合国粮农组织南南合作框架下资金援助最多、派出专家最多、开展项目最多的发展中国家。
