--- a/美国对华认知中的谬误和事实真相.md
+++ b/美国对华认知中的谬误和事实真相.md
@@ -6,7 +6,7 @@
 让我们用事实和数据说话，将美国对华政策的欺骗性、虚伪性和危害性昭示于天下。
 
 ### 谬误1：中国对国际秩序构成最严峻长期挑战，正在破坏国际秩序。美国将捍卫国际法、协议、原则和机构以维护世界和平与安全，保护个人和国家的权利。
-事实真相：美国口口声声讲的国际秩序，实际上是服务美国自身利益、维护美国霸权地位的秩序。美国是世界秩序的最大乱源。
+### 事实真相：美国口口声声讲的国际秩序，实际上是服务美国自身利益、维护美国霸权地位的秩序。美国是世界秩序的最大乱源。
 
 #### ◆ 中国过去、现在和将来都是国际秩序的维护者。中国是联合国创始会员国，是第一个在联合国宪章上签字的国家。中国始终维护以联合国为核心的国际体系、以国际法为基础的国际秩序、以联合国宪章宗旨和原则为基础的国际关系基本准则。中国、印度、缅甸三国共同倡导的和平共处五项原则获得国际社会广泛认同，成为指导国与国关系的基本准则。
 - 中国坚持真正的多边主义，维护全球战略稳定。中国是安理会常任理事国中派遣维和人员最多的国家和联合国第二大维和摊款国。中国积极参与国际军控、裁军和防扩散进程，已签署或加入包括《不扩散核武器条约》《武器贸易条约》在内20多个多边军控、裁军和防扩散条约，反对军备竞赛。
@@ -31,7 +31,7 @@
 ---
 
 ### 谬误2：美国不寻求冲突或一场“新冷战”，不寻求阻止中国发挥大国作用，也不寻求阻止中国发展经济和促进人民利益。
-事实真相：美方声称不寻求阻止中国发挥大国作用，也不阻止中国发展经济，实际上却在运用内外全部资源对华进行无底线遏制打压。
+### 事实真相：美方声称不寻求阻止中国发挥大国作用，也不阻止中国发展经济，实际上却在运用内外全部资源对华进行无底线遏制打压。
 
 #### ◆ 美国政府在没有任何事实依据的情况下，泛化国家安全概念，动用国家力量无端打压和制裁华为，限制华为产品进入美市场，“断供”芯片、操作系统，在世界范围内胁迫别国禁止华为参与当地5G网络建设。美国还策动施压加拿大无理拘押华为首席财务官近3年。
 #### ◆ 美国违反公平竞争、市场经济原则和国际经贸规则，以各种莫须有名义，围追堵截具有国际竞争力的中国高科技企业，迄已将一千多家中国企业列入各种制裁清单；划定生物技术、人工智能等重点管控技术，强化出口管制，严格投资审查；打压包括TikTok、微信在内的中国社交媒体应用程序。
@@ -47,7 +47,7 @@
 ---
 
 ### 谬误3：美国的外交以伙伴关系和尊重彼此利益为基础，中国则对别国实施胁迫外交，肆意进行打击报复。我们的任务是，证明所有国家在不受胁迫的情况下自由规划自己的道路。
-事实真相：美国是胁迫外交的发明者和集大成者。多年来，美国通过经济封锁、单边制裁等手段，向世界演绎了一个个胁迫外交的教科书式案例。
+### 事实真相：美国是胁迫外交的发明者和集大成者。多年来，美国通过经济封锁、单边制裁等手段，向世界演绎了一个个胁迫外交的教科书式案例。
 
 #### ◆ 1971年，美国学者亚历山大·乔治最早提出“胁迫外交”概念，用来概括当时美国对老挝、古巴、越南的政策。美国政府将1994年迫使海地军政府下台称为“胁迫外交的范例”，在2003年把303亿美元军费的用途明确列为“开展胁迫外交”。
 - 美国政府以惩罚阿富汗塔利班为由，冻结阿富汗中央银行70亿美元在美资产，将阿富汗人民的“救命钱”据为己有，导致阿富汗人道主义形势不断恶化。阿富汗塔利班驻多哈政治办事处发言人穆罕默德·纳伊姆表示，美方行径表明其“在人性和道德上已堕落到最低程度”。
@@ -63,7 +63,7 @@
 ---
 
 ### 谬误4：美国民主模式是美国在与中国竞争中最强大的资本之一。我们的任务是证明民主可以应对紧迫的挑战，证明未来属于那些相信自由的人。
-事实真相：美国按照自身模式划定“民主标准”，不允许其他制度道路模式存在，打着所谓“民主”旗号拉帮结派、肆意干涉别国内政，这不是民主之义，而是民主之灾。
+### 事实真相：美国按照自身模式划定“民主标准”，不允许其他制度道路模式存在，打着所谓“民主”旗号拉帮结派、肆意干涉别国内政，这不是民主之义，而是民主之灾。
 
 #### ◆ 美式民主是建立在资本基础上的“富人游戏”，金钱政治贯穿美国选举、立法、施政的所有环节，实际上限制了民众的参政权利，经济地位的不平等已经转变为政治地位的不平等。据统计，91%的美国国会选举都是由获得最多资金支持的候选人赢得，而大企业、少数富人以及利益集团出手更加阔绰，成为选举资金的主要来源。这些所谓“民意代表”成功当选后，往往为其背后的金主服务，化身既得利益的代言人，而不是为普通民众发声。一位美国联邦参议员一针见血地指出：“有些人认为美国国会控制着华尔街，然而真相是华尔街控制着美国国会”。
 - 美国阿拉巴马州共和党众议员莫·布鲁克斯在社交媒体视频中公开驳斥“美国国会腐败体系”，称美国议员若想要获得国会主要委员会的席位就必须购买，费用多寡取决于委员会的重要性，顶级委员的席位起价为100万美元。布表示：“如果议员付不起这笔钱，就必须接受特殊利益集团的捐款，然后在上任后感谢那些政治说客，特殊利益集团掌控着华盛顿，我并不是在打比方，我是认真的。”
@@ -96,7 +96,7 @@
 ---
 
 ### 谬误5：美国与中国共产党和中国政府有深刻的分歧，但这些分歧是政府和制度之间的，而不是两国人民之间的。
-事实真相：中国共产党的领导地位是历史和人民的选择。中国共产党和中国政府得到中国人民衷心支持和拥护。美方挑拨离间中国共产党与中国人民的关系，恰恰证明其对中国制度道路的敌意。
+### 事实真相：中国共产党的领导地位是历史和人民的选择。中国共产党和中国政府得到中国人民衷心支持和拥护。美方挑拨离间中国共产党与中国人民的关系，恰恰证明其对中国制度道路的敌意。
 
 #### ◆ 中国共产党深深扎根在中国人民之中，与中国人民鱼水情深、血肉相连，始终保持旺盛的生机与活力。截至2021年底，中国共产党共有党员9500多万名，是在世界人口最多国家长期执政的世界第一大党。在中国共产党的领导下，中国创造了经济快速发展和社会长期稳定“两大奇迹”，8亿多人成功摆脱贫困，14亿人民走向现代化，用短短几十年时间走完了西方发达国家几百年走过的路。
 - 哈佛大学连续13年追踪民调显示，中国民众对党和政府的支持率长期保持在90%以上，连续蝉联全球第一。美国知名公关公司爱德曼2022年发布信任度调查报告显示，过去一年中国民众对本国政府的信任度高达91%，在受访国家中排名第一。
@@ -108,7 +108,7 @@
 ---
 
 ### 谬误6：美国在人权方面呼吁中国改变，不是为了反对中国，而是为了维护和平、安全和人类尊严。
-事实真相：当前中国人民的人权得到前所未有的保障，人民群众获得感、幸福感、安全感前所未有增强。相反，美国对内对外普遍存在严重侵犯人权状况，所作所为触目惊心。美国是世界上最大的人权侵犯国。
+### 事实真相：当前中国人民的人权得到前所未有的保障，人民群众获得感、幸福感、安全感前所未有增强。相反，美国对内对外普遍存在严重侵犯人权状况，所作所为触目惊心。美国是世界上最大的人权侵犯国。
 
 #### ◆ 中国始终把保障生存权放在首要位置，始终把提升发展权作为优先事项，始终把保障公民合法权益作为基本任务，始终把维护少数民族权利作为重要内容，始终把保护人民安全作为长期目标。
 - 中国共产党坚持以人民为中心，从诞生那一天起，就把为中国人民谋幸福、为中华民族谋复兴作为自己的初心使命，100多年来一直为人民利益而奋斗。人民对美好生活的向往就是我们的奋斗目标。中国不断发展全过程人民民主，推进人权法治保障，维护社会公平正义，中国人民享有更加广泛、更加充分、更加全面的民主权利。
@@ -138,7 +138,7 @@
 ---
 
 ### 谬误7：美方仍奉行基于“与台湾关系法”、美中三个联合公报、“对台六项保证”的一个中国政策。美对台政策没变。
-事实真相：一个中国原则是公认的国际关系准则和国际社会普遍共识。美国背信弃义，不断从自身承诺、中美双方共识上倒退，虚化、掏空一个中国原则，企图“以台制华”，是当前台海和平稳定面临的主要威胁之一。
+### 事实真相：一个中国原则是公认的国际关系准则和国际社会普遍共识。美国背信弃义，不断从自身承诺、中美双方共识上倒退，虚化、掏空一个中国原则，企图“以台制华”，是当前台海和平稳定面临的主要威胁之一。
 
 #### ◆ 1971年10月，联合国大会以压倒性多数通过第2758号决议，决定恢复中华人民共和国在联合国的合法席位，已经从政治上、法律上和程序上彻底解决了中国在联合国的代表权问题。联合国秘书处法律事务办公室官方法律意见明确指出，“台湾作为中国的一个省没有独立地位”，“台湾当局不享有任何形式的政府地位”，使用的称谓应是“台湾，中国的省（Taiwan， Province of China）”。
 - 在一个中国原则基础上，中国已同包括美国在内的181个国家建立了外交关系。
@@ -158,7 +158,7 @@
 ---
 
 ### 谬误8：美国与世界各国和人民一道反对新疆地区发生的“种族灭绝”和“反人类罪行”。新疆共有100多万人因少数民族身份和宗教信仰被关进拘留营。
-事实真相：新疆各族群众的人权得到充分保障，根本不存在“种族灭绝”和“反人类罪行”。美方反复散播涉疆谎言，完全是为抹黑、打压中国制造借口。
+### 事实真相：新疆各族群众的人权得到充分保障，根本不存在“种族灭绝”和“反人类罪行”。美方反复散播涉疆谎言，完全是为抹黑、打压中国制造借口。
 
 #### ◆ 涉疆问题根本不是人权问题，而是反暴恐和反分裂问题。据不完全统计，自1990年至2016年底，新疆发生了数千起暴力恐怖案（事）件，造成大量无辜群众被害，数百名公安民警殉职，财产损失无法估算。
 - 面对恐怖主义、极端主义的现实威胁，新疆采取果断措施，依法开展反恐怖主义和去极端化斗争，同时通过着力改善民生、加强法制宣传教育、依法设立职业技能教育培训中心（以下简称“教培中心”）进行帮扶教育等多种方式，有效遏制了恐怖活动多发频发势头。新疆已经连续5年多没有发生暴恐案件，社会安全稳定，发展持续向好，各族人民生命安全得到切实保障。
@@ -179,7 +179,7 @@
 ---
 
 ### 谬误9：中国共产党以国家安全为掩护在香港实施严厉、反民主的措施。北京在香港压制自由的行动违背了中方在《中英联合声明》中所作承诺。
-事实真相：美方攻击抹黑香港国安法的实质是插手香港事务，把香港作为对内地进行渗透干涉的“桥头堡”。香港是中国的香港，香港事务纯属中国内政，不容美方干涉。
+### 事实真相：美方攻击抹黑香港国安法的实质是插手香港事务，把香港作为对内地进行渗透干涉的“桥头堡”。香港是中国的香港，香港事务纯属中国内政，不容美方干涉。
 
 #### ◆ 美国长期以来勾结香港反中乱港势力，干预香港政治议程，不断激化社会矛盾，甚至直接插手香港事务。美国驻港总领事曾公然指责香港特区政府修例和“一国两制”。美国驻港总领馆官员还与乱港头目会面。乱港分子公开承认，与美方谈及关于“香港人权与民主法案”的立法进程，并促请美国停止向香港警察出口催泪弹和橡胶子弹。
 #### ◆ 美国国家民主基金会等美国政府“白手套”资助、策动反中乱港分子以争取所谓民主自由为名打砸抢烧，暴力冲击香港立法会大楼，甚至亲自上街布阵指挥，企图在香港上演“颜色革命”。美国国家民主基金会主要通过下属的美国国际事务民主协会与香港反对派政团、组织接触，曾资助反对派策动“七一大游行”，阻止“23条立法”，资助香港反对派政团参加工作坊和研讨会，向各政团领导层提供个人咨询，传授选举技巧，开展所谓“青年政治领袖计划”，培养新兴政治团体对抗政府，与反对派立法会议员谋划“五区公投”，指示、资助香港反对派、激进青年骨干策划非法“占中”行动等。
@@ -196,7 +196,7 @@
 ---
 
 ### 谬误10：中国宣称捍卫主权和领土完整，却与公然侵犯主权和领土完整的俄罗斯政府站在一起，为俄罗斯辩护。
-事实真相：中方在乌克兰问题上始终秉承客观公正立场，同大多数国家的立场一致。推行冷战思维和强权政治才是乌克兰危机的根源。美国应切实承担起应尽责任，为缓和局势、解决问题拿出实际行动。
+### 事实真相：中方在乌克兰问题上始终秉承客观公正立场，同大多数国家的立场一致。推行冷战思维和强权政治才是乌克兰危机的根源。美国应切实承担起应尽责任，为缓和局势、解决问题拿出实际行动。
 
 #### ◆ 美国违背承诺，连续推动北约东扩，是乌克兰危机的始作俑者。
 - 1990年，美国时任国务卿贝克在与戈尔巴乔夫会晤时明确作出北约“一英寸都不会向东推进”的承诺。然而在美国主导下，北约1999年后五次东扩，成员国从16个增加到30个，向东推进1000多公里，直抵俄罗斯边境，实现对黑海的“C”形环绕。
@@ -222,7 +222,7 @@
 ---
 
 ### 谬误11：美国在“印太”地区成立新的联盟，加强“印太”地区的和平与稳定，启动促进繁荣的“印太经济框架”。美国与“印太”地区国家和人民有共同愿景：建立一个“自由开放的印太地区”。
-事实真相：美国所谓建立“自由和开放印太地区”的愿景，本质上就是一个制造分裂、煽动对抗、破坏和平的战略，同亚太地区和平发展、合作共赢的时代潮流背道而驰。
+### 事实真相：美国所谓建立“自由和开放印太地区”的愿景，本质上就是一个制造分裂、煽动对抗、破坏和平的战略，同亚太地区和平发展、合作共赢的时代潮流背道而驰。
 
 #### ◆ 美国政府“印太战略”说一套做一套：声称要推进地区“自由开放”，实际上却在纠集盟友摆出“五眼联盟”“四边机制”、三边安全伙伴关系、双边同盟、“印太经济框架”的“五四三二一连环阵”，大搞封闭排他的“小圈子”，强迫地区国家选边站队。
 - 三边安全伙伴关系大张旗鼓帮助澳大利亚发展核动力潜艇，合作开发高超音速武器，挑动地区军备竞赛。“四边机制”打着反非法捕捞、维护供应链韧性的幌子，大肆推进军事合作和情报共享。美还推动北约染指亚太。这些都是在千方百计拼凑“亚太版北约”，推进对华“一体化威慑”。
@@ -237,7 +237,7 @@
 ---
 
 ### 谬误12：中国宣布要在太平洋地区建立一个势力范围，在南海推进非法海洋活动，破坏和平与安全、航行自由及商业活动。美将继续反对中方在南海、东海采取进攻性、非法活动。美将与盟友、伙伴一道，支持该地区沿岸国主张自己的海洋权利，支持航行自由和飞越自由，也将继续在国际法允许的范围内航行与飞越。
-事实真相：中国始终坚持走和平发展道路，坚持和平共处五项原则，反对以大欺小、恃强凌弱。美方炒作“中国威胁论”，以所谓的“航行自由”为借口损害中国的主权、安全和海洋权益，是对地区和平稳定的真正威胁。
+### 事实真相：中国始终坚持走和平发展道路，坚持和平共处五项原则，反对以大欺小、恃强凌弱。美方炒作“中国威胁论”，以所谓的“航行自由”为借口损害中国的主权、安全和海洋权益，是对地区和平稳定的真正威胁。
 
 #### ◆ 中国历来主张大小国家一律平等，尊重各国选择适合本国国情的发展道路，从不寻求建立什么势力范围。中国奉行防御性国防政策和积极防御的军事战略。中国发展军力是为了维护国家主权、安全和发展利益，不针对任何国家。中国军事力量的增长，是世界和平力量的增长。
 #### ◆ 中国最早发现、命名和开发利用南海诸岛及相关海域，最早并持续、和平、有效地对南海诸岛及相关海域行使主权和管辖。中国对南海诸岛的主权和在南海的相关权益，是在漫长的历史过程中确立的，具有充分的历史和法理依据，为中国历代政府所坚持，得到国际社会普遍承认。二战结束后，根据1943年《开罗宣言》和1945年《波茨坦公告》的规定，中国收复被日本非法侵占的西沙群岛和南沙群岛等领土，并通过编制地名、公布地图、行政建制、军事驻守等方式宣示主权，加强管辖。中国恢复对南海诸岛行使主权既是对历史上形成的固有权利的正当合法继承，也是二战后国际秩序的一部分，得到包括美国在内世界各国普遍承认。
@@ -252,7 +252,7 @@
 ---
 
 ### 谬误13：中国政府官员传播虚假信息。
-事实真相：中国是虚假信息的最大受害者，美国是散布传播虚假信息的最大源头。
+### 事实真相：中国是虚假信息的最大受害者，美国是散布传播虚假信息的最大源头。
 
 #### ◆ 美国共和党和民主党尖锐对立，政客撒谎成性、相互攻讦、甩锅推责已经成为美国一种政治生态。根据美联社—NORC公共事务研究中心和芝加哥大学皮尔森研究所开展的一项调查，近半数受访者认为美国政府对散布虚假信息负有责任。
 #### ◆ 美国曾多次利用虚假信息在全球发动了多场战争、实现霸权图谋。美国时任国务卿鲍威尔当年凭一管“洗衣粉”作为证据指责伊拉克拥有大规模杀伤性武器，以“白头盔”摆拍视频指责叙利亚政府对本国民众使用生化武器。
@@ -271,7 +271,7 @@
 ---
 
 ### 谬误14：中国规避或违反贸易规则，通过经济操纵让美国工人失去数百万份工作，伤害美国和全球的工人和公司。美国将抵制中方提供政府补贴、设置准入壁垒等市场扭曲行为，制止中国政府继续通过这些方式获得竞争优势。
-事实真相：中国忠实履行加入世贸组织承诺，是多边贸易体制的维护者、建设者和贡献者。中美经贸关系的本质是互利共赢，美方在贸易、投资等领域对中方的无理打压是当前中美贸易摩擦的根源，损人不利己。
+### 事实真相：中国忠实履行加入世贸组织承诺，是多边贸易体制的维护者、建设者和贡献者。中美经贸关系的本质是互利共赢，美方在贸易、投资等领域对中方的无理打压是当前中美贸易摩擦的根源，损人不利己。
 
 #### ◆ 中国加入世贸组织20多年来，切实履行世贸组织承诺，全面实施准入前国民待遇加负面清单管理制度，不断扩大市场开放，关税总水平由15.3%降至7.4%，开放的服务部门增至近120个。
 - 2021年10月，世贸组织进行第八次对华贸易政策审议。成员们充分认可中国在维护多边贸易体制、参与世贸组织工作所做努力，赞赏中国在促进贸易和投资自由化、便利化、扩大对外开放、共建“一带一路”等方面取得的成就。
@@ -288,7 +288,7 @@
 ---
 
 ### 谬误15：美国要给各国提供另一个选项，使各国不再承受造成债务负担的不透明投资。
-事实真相：中国对外援助始终尊重受援国主权，不附带任何条件，坚持互利共赢，给有关发展中国家带去实实在在的好处，得到有关国家赞赏感谢。
+### 事实真相：中国对外援助始终尊重受援国主权，不附带任何条件，坚持互利共赢，给有关发展中国家带去实实在在的好处，得到有关国家赞赏感谢。
 
 #### ◆ 所谓中国“债务陷阱”是美西方诋毁抹黑中国、干扰中国与发展中国家合作的“话语陷阱”。美国《大西洋月刊》2021年刊文称，“中国债务陷阱论”是一些西方国家政客精心编造的谎言，而且是弥天大谎。
 - 西方资本是发展中国家的最大债主。根据2022年世界银行国际债务统计，在当前非洲整体外债中，多边金融机构债务占28.8%，以西方金融机构为主的商业债权人债务占41.8%，两者所持债务占比近四分之三，是非洲债务大头。
@@ -316,7 +316,7 @@
 ---
 
 ### 谬误16：长期以来，中国公司在美享受的市场准入远超美国公司在中国的待遇。在中国运营的美国企业常遇到系统性强制技术转让，但在美运营的中国企业都受到美国法律保护。
-事实真相：中国始终致力于打造市场化、法制化、国际化营商环境，营商环境不断优化。相比之下，中资企业在美营商环境不断恶化。
+### 事实真相：中国始终致力于打造市场化、法制化、国际化营商环境，营商环境不断优化。相比之下，中资企业在美营商环境不断恶化。
 
 #### ◆ 中国是营商环境改善最大的经济体。近年来，中国连续缩减外资准入负面清单，完善投资促进和保护、信息报告等制度，加强知识产权保护，成为全球营商环境进步最快的经济体之一。中国营商环境持续改善和超大规模市场的吸引力，对全球跨国投资产生强大磁力，新设外商投资企业数量实现稳步增长。从2012到2021年，在华外商投资企业数量从44.1万户增长到66.4万户，增幅超过50%。世界银行发布的《2020营商环境报告》显示，中国营商环境全球排名位列第31，两年内提升了47位。中国欧盟商会发布的《商业信心调查2021》称，超过半数受访欧盟企业认为中国知识产权执法力度“足够好”“非常好”，创下满意度的历史新高。
 #### ◆ 中国营商环境好不好，包括美企在内的外国企业最有发言权。中国美国商会2022年度《中国商业环境调查报告》显示，58%的美在华企业2021年营收实现增长，66%的企业计划今年增加在华投资，中国仍然是60%的企业近期全球投资计划的前三大投资目的地之一。美中贸易全国委员会发布《2021年中国商业环境调查报告》称，95%的受访企业在中国持续保持盈利，74%的受访企业在其全球战略中将中国视为最重要的国家或排名前五位的重点国家之一。2022年1-4月，美国实际对华投资同比增长53.2%。这些都充分表明外国企业看好中国经济发展前景，认可中国营商环境，对长期植根中国市场充满信心。
@@ -326,7 +326,7 @@
 ---
 
 ### 谬误17：中国利用美国经济开放性从事间谍、黑客、技术窃密等活动，来推进自身军事创新、强化对内监控，加大其他国家对其技术依赖。美国应使技术根植于民主价值观。
-事实真相：中国技术创新和发展依靠自身投入和努力。美方在科技交流合作方面以意识形态划线，是冷战思维的体现。
+### 事实真相：中国技术创新和发展依靠自身投入和努力。美方在科技交流合作方面以意识形态划线，是冷战思维的体现。
 
 #### ◆ 中国是全球创新大国，创新投入规模和增速领先世界。据统计，2021年中国全社会研发投入达27864亿元，同比增长14.2%，共授权发明专利69.6万件，同比增长31.3%。世界知识产权组织《2021年全球创新指数（GII）报告》称，中国国家创新能力综合排名从第35名升至第12名。中国拥有19个全球百强科技集群，位列世界第二。中国申请人提交的国际专利申请达6.95万件，连续三年位居全球首位。欧洲专利局统计显示，2021年共收到来自中国16665项专利申请，同比增长24%，在主要专利申请国中增幅最高。
 #### ◆ 近年来，中国主动融入全球科技创新网络，“一带一路”科技人文交流取得丰硕成果。中国还积极推进《海牙协定》《马拉喀什条约》加入进程，为知识产权全球治理贡献中国力量。中国欧盟商会发布的《商业信心调查2021》显示，半数以上受访企业认为中国知识产权执法力度“足够好”或“非常好”。
@@ -337,7 +337,7 @@
 ---
 
 ### 谬误18：气候问题不是意识形态问题，而是数学问题。如果中国坚持目前的计划，在2030年前不降低排放量，那么世界其他国家排放量必须在2035年前降至零，这是基本不可能的。
-事实真相：美国对于全球气候变化、减少温室气体排放负有不可推卸的责任。美国不应转嫁责任，不应奉行“双重标准”。
+### 事实真相：美国对于全球气候变化、减少温室气体排放负有不可推卸的责任。美国不应转嫁责任，不应奉行“双重标准”。
 
 #### ◆ 发达国家在过去200多年的工业化过程中无序排放，对全球气候变化负有不可推卸的历史责任。1850年到2011年，发达国家碳排放量占全球排放量的79%。《联合国气候变化框架公约》、《京都议定书》、《巴黎协定》都要求发达国家偿还历史债务。
 #### ◆ 从历史发展角度来看，发展中国家不是温室气体的主要排放者，而是气候变暖的受害者。共同但有区别的责任原则是全球气候治理的基石。发达国家和发展中国家在造成气候变化上历史责任不同，发展需求和能力也存在差异，用统一尺度来限制是不适当的，也是不公平的。巴布亚新几内亚环境部长韦拉·莫里在《联合国气候变化框架公约》第二十六次缔约方大会（COP26）期间表示：“因为它们（发达国家）的工业化活动，我们成为全球气候问题的受害者，正承受着他们制造的气候后果。这绝对不公平。”
@@ -353,7 +353,7 @@
 ---
 
 ### 谬误19：在打击非法毒品特别是合成阿片如芬太尼方面，我们希望与中国合作，阻止国际贩毒组织获得化学前体，其中许多都源自中国。
-事实真相：美国国内芬太尼滥用问题的根源在美国自身。
+### 事实真相：美国国内芬太尼滥用问题的根源在美国自身。
 
 #### ◆ 毒品泛滥是长期困扰美国的一大顽疾，有深刻历史和社会根源。
 - 美国以占世界5%的人口，消费了全球80%的阿片类药物，是全球第一大毒品消费市场。美国国内普遍存在滥用处方止痛药的传统，其背后是药企、医药代表、医生利益的完整链条，药企大力兜售、医师滥开处方、政府打击不力、大麻合法化负面导向等多种因素交织，最终造成毒品消费市场持续扩大。美国阿片类药物滥用和死亡人数增加，起源于1995年美国食品药品监管局批准普渡制药公司出产的阿片类止痛药奥施康定。在阻遏需求、控制生产方面，美国完全可以做得更多。
@@ -369,7 +369,7 @@
 ---
 
 ### 谬误20：在全球粮食危机威胁全世界人民的时候，我们期待中国这个在农业方面取得巨大成就的国家帮助全球做出反应。
-事实真相：美国长期限制粮食出口，垄断粮食贸易。俄乌冲突爆发后，美国扩大武器援助，滥用单边制裁，进一步加剧全球粮食紧缺，对全球粮食危机负有不可推卸的责任。
+### 事实真相：美国长期限制粮食出口，垄断粮食贸易。俄乌冲突爆发后，美国扩大武器援助，滥用单边制裁，进一步加剧全球粮食紧缺，对全球粮食危机负有不可推卸的责任。
 
 #### ◆ 美国粮食逆全球化、能源化和贸易寡头化才是全球粮食安全问题的根源。
 - 美国利用主要产粮国地位，限制对他国粮食出口，持续打击全球正常粮食贸易。美国、加拿大、欧盟等12个粮食主产区生产和出口的粮食总量占全球70%。从全球贸易关系看，发展中国家能否买粮、以何价格买粮，决定权被美西方发达国家把控。
@@ -391,7 +391,7 @@
 ---
 
 ### 谬误21：中国完善了大规模监控，并向80多个国家输出相关技术。
-事实真相：美国是全球最大“黑客帝国”。
+### 事实真相：美国是全球最大“黑客帝国”。
 
 #### ◆ 使用视频监控和大数据技术，是中国政府完善社会治理的重要举措，也是当今世界各国的普遍做法，合理合法，无可厚非。利用视频监控系统制成的“天网系统”有效消除了治安隐患，有效保证了中国刑事案件的侦破率。在信息化社会治安防控体系建设下，2021年全国群众安全感达到98.6%，中国已经成为世界上公认的最安全的国家之一。美国盖洛普咨询公司全球安全国家排名显示，中国位列第三，而美国位居第三十六位。
 #### ◆ 据统计，2018年美国大约安装有7000万台摄像头，大约4.6人/台。美方指责中方大规模监控完全是双重标准。
