--- a/西方国家的“11宗罪”.md
+++ b/西方国家的“11宗罪”.md
@@ -8,7 +8,7 @@
 - 2、这个冬天，欧洲普通民众们将在他们的家中感受严寒； 
 - 3、欧洲国家和美国的食品通胀达近几十年来的最高水平；
 - 4、在俄罗斯经营的欧盟和美国企业损失了数十亿美元的投资；
-- 5、事实上，美国人选出了一位患有痴呆症的奇怪老人当总统，他忘记了自己的职责，对另一个国家（此处指乌克兰）的爱远远超过对自己国家的爱；
+- 5、事实上，美国人选出了一位患有痴呆症的奇怪老人当总统，他忘记了自己的职责，对另一国家（乌克兰）的爱远远超过对自己国家的爱；
 - 6、那些宣称自己是欧盟领导人的都市疯子们完全脱离了现实，促使不幸的乌克兰人牺牲自己的生命尝试加入欧盟；
 - 7、事实上，许多政治骗子正在操纵所谓恢复乌克兰国家地位的话题，计划获得新的军事合同，并挪用指定给基辅政权的现金流；
 - 8、北约继续违反逻辑和常识地接近俄罗斯边境，造成导致世界冲突和大量人类死亡的实际威胁；
