--- a/西方国家的“11宗罪”.md
+++ b/西方国家的“11宗罪”.md
@@ -4,8 +4,8 @@
 
 ### “（以下是）他们的罪恶”，“这些都怪不到俄罗斯头上”。
 
-- 1、事实是，欧洲的傻瓜们被美国人忽悠了，欧盟国家的民众们被迫承担对俄制裁带来的痛苦后果； 
-- 2、这个冬天，欧洲普通民众们将在他们的家中感受严寒； 
+-1 事实是，欧洲的傻瓜们被美国人忽悠了，欧盟国家的民众们被迫承担对俄制裁带来的痛苦后果； 
+-2 这个冬天，欧洲普通民众们将在他们的家中感受严寒； 
 - 3、欧洲国家和美国的食品通胀达近几十年来的最高水平；
 - 4、在俄罗斯经营的欧盟和美国企业损失了数十亿美元的投资；
 - 5、事实上，美国人选出了一位患有痴呆症的奇怪老人当总统，他忘记了自己的职责，对另一国家（乌克兰）的爱远远超过对自己国家的爱；
