--- a/美国的霸权霸道霸凌及其危害.md
+++ b/美国的霸权霸道霸凌及其危害.md
@@ -37,7 +37,8 @@ ___
 
 美国前国务卿蓬佩奥2023年1月出版新书《寸步不让》，披露美国曾计划对委内瑞拉实施干预，拟迫使马杜罗政府同反对派达成协议，剥夺委内瑞拉通过出口石油和黄金获取外汇的能力，施加经济高压，影响2018年总统选举。
 + 美国对国际规则采取双重标准，以私利为先，毁约退群，将国内法凌驾于国际法之上。2017年4月，特朗普政府以联合国人口基金“支持和参与强迫堕胎或非自愿绝育手术”为由，宣布对该组织“断供”。美国曾于1984年、2017年两次退出联合国教科文组织。2017年，宣布退出气候变化《巴黎协定》。2018年，以对以色列“存在偏见”和“无法有效保护人权”为由，宣布退出联合国人权理事会。2019年，为不受束缚地发展先进武器，宣布退出《中导条约》。2020年，宣布退出《开放天空条约》。
-  美国还反对《禁止生物武器公约》核查议定书谈判，妨碍国际社会对各国生物武器活动进行核查，成为生物军控进程的“绊脚石”。作为世界上唯一拥有化学武器库存的国家，美国多次推迟化学武器销毁时间，消极履行义务，成为建立“无化武世界”的最大障碍。
+
+美国还反对《禁止生物武器公约》核查议定书谈判，妨碍国际社会对各国生物武器活动进行核查，成为生物军控进程的“绊脚石”。作为世界上唯一拥有化学武器库存的国家，美国多次推迟化学武器销毁时间，消极履行义务，成为建立“无化武世界”的最大障碍。
 + 美国借助盟友体系拉帮结派。在亚太地区强推“印太战略”，纠集“五眼联盟”“四边机制”“美英澳三边安全伙伴关系”，大搞封闭排他的小圈子，强迫地区国家选边站队，实质是制造地区分裂、煽动对抗、破坏和平。
 + 美国肆意评判他国民主，公然炮制“民主对抗威权”虚假叙事，挑动隔阂分裂，煽动对立对抗。2021年12月，美国举办首届“领导人民主峰会”，践踏民主精神，制造世界分裂，遭到许多国家批评和反对。2023年3月，美国还将再次举办“领导人民主峰会”，将继续不受欢迎、不得人心。
 
@@ -78,28 +79,36 @@ ___
 
 20世纪80年代，美国为打击日本半导体产业发展，采取包括启动“301”调查、通过多边协议为双边谈判制造筹码、威胁将日本列为不公平贸易国、加征报复性关税等手段，逼迫日本签订《美日半导体协定》，导致日本半导体企业几乎完全退出全球竞争，市场份额由50%跌至10%。同时，在美国政府扶持下，大量美国半导体企业趁机抢占市场。
 + 美国将科技问题政治化、武器化、意识形态化。美国泛化国家安全概念，动用国家力量打压和制裁中国华为公司，限制华为产品进入美国市场，断供芯片和操作系统，在全世界胁迫其他国家禁止华为参与当地5G网络建设，还策动加拿大无理拘押华为首席财务官孟晚舟近3年。
-  美国还炮制各种借口，围追打压具有国际竞争力的中国高科技企业，已将1000多家中国企业列入各种制裁清单。美国还对生物技术、人工智能等高端技术实施管控，强化出口管制，严格投资审查，打压包括TikTok、微信等中国社交媒体应用程序，游说荷兰和日本限制对中国芯片和相关设备与技术出口。
-  美国还在对华科技人才政策方面采取双重标准。2018年6月以来，针对部分高科技专业的中国留学生缩短了签证有效期限，屡屡无端禁止和滋扰中国学者赴美学术交流以及学生赴美留学，对在美华人学者开展大规模调查，排挤、打压华人科研群体。
+
+美国还炮制各种借口，围追打压具有国际竞争力的中国高科技企业，已将1000多家中国企业列入各种制裁清单。美国还对生物技术、人工智能等高端技术实施管控，强化出口管制，严格投资审查，打压包括TikTok、微信等中国社交媒体应用程序，游说荷兰和日本限制对中国芯片和相关设备与技术出口。
+
+美国还在对华科技人才政策方面采取双重标准。2018年6月以来，针对部分高科技专业的中国留学生缩短了签证有效期限，屡屡无端禁止和滋扰中国学者赴美学术交流以及学生赴美留学，对在美华人学者开展大规模调查，排挤、打压华人科研群体。
 + 美国借民主之名维护科技霸权。打造“芯片联盟”“清洁网络”等科技“小圈子”，给高科技打上民主、人权的标签，将技术问题政治化、意识形态化，为对他国实施技术封锁寻找借口。2019年5月，美国拉拢32个国家在捷克召开“布拉格5G安全大会”，发布“布拉格提案”，企图排除中国5G技术产品。2020年4月，时任美国国务卿蓬佩奥宣布“5G清洁路径”，计划在5G领域构建以“民主”为意识形态纽带、以“网络安全”为目标的技术联盟。美国上述举措的实质，就是通过技术联盟维护科技霸权。
 + 美国滥用科技霸权大搞网络攻击和监听窃密。美国是全球窃密大户，作为“黑客帝国”早已恶名远扬。美国网络攻击和监听监视无孔不入，窃密手段五花八门，包括利用模拟手机基站信号接入手机盗取数据，操控手机应用程序，侵入云服务器，通过海底光缆进行窃密等。
-  美国实施“无差别”监视监听。从竞争对手到盟友，甚至包括德国前总理默克尔、法国多任总统等盟国领导人，无不在监听范围之内。“棱镜门”“脏盒”“怒角计划”“电幕行动”等美国网络监控和攻击事件，印证了美国的盟友伙伴都在美国的严密监控之列。美国窃听盟友伙伴的行径早已引起国际社会公愤。曾曝光美国监听项目的“维基揭秘”网站创始人阿桑奇说，不要期待这个“监听超级大国”会做出有尊严和让人尊重的行为。规则只有一个，那就是没有规则。
+
+美国实施“无差别”监视监听。从竞争对手到盟友，甚至包括德国前总理默克尔、法国多任总统等盟国领导人，无不在监听范围之内。“棱镜门”“脏盒”“怒角计划”“电幕行动”等美国网络监控和攻击事件，印证了美国的盟友伙伴都在美国的严密监控之列。美国窃听盟友伙伴的行径早已引起国际社会公愤。曾曝光美国监听项目的“维基揭秘”网站创始人阿桑奇说，不要期待这个“监听超级大国”会做出有尊严和让人尊重的行为。规则只有一个，那就是没有规则。
 
 <h4 id='c5'>五、蛊惑人心的文化霸权</h4>
 
 美国文化的全球扩张是其对外战略的重要组成部分。美国惯用文化来加强和维护其在世界上的霸权地位。
 
 + 美国在电影等商品中植入美国价值观。通过影视产品、图书、各种媒体以及资助非营利性文化机构，“嵌入配售”美国价值观和生活方式，打造出以美式文化为主导的文化和舆论空间，推行文化霸权。美国学者约翰·耶马在其《世界的美国化》一文中指出，关于文化扩张，美国真正的武器是好莱坞的电影业、麦迪逊大街的形象设计厂和马特尔公司、可口可乐公司的生产线。
-  美国推行文化霸权的形式多种多样，占据世界70%以上份额的美国电影是主渠道之一。美国电影善于利用多元文化背景，创造对各族裔吸引力。随着好莱坞电影在全世界不断发行，美国将价值观裹挟其中，大加渲染。
+
+美国推行文化霸权的形式多种多样，占据世界70%以上份额的美国电影是主渠道之一。美国电影善于利用多元文化背景，创造对各族裔吸引力。随着好莱坞电影在全世界不断发行，美国将价值观裹挟其中，大加渲染。
 + 美国文化霸权从“直接介入”走向“媒介渗透”和“世界喇叭”，在干涉他国内政时，更加依靠美国主导的西方媒体，煽动全球舆论。
-  美国政府严格审查所有社交媒体公司，要求执行政府指示。福克斯商业频道报道，2022年12月27日，推特公司首席执行官马斯克表示，所有社交媒体平台都与美国政府合作，对内容进行审查。美国的舆论导向受到政府干预，限制所有不利言论。谷歌经常让链接页面消失。
-  美国国防部操控社交媒体。2022年12月，美国独立调查网站“The Intercept”披露，2017年7月美军中央司令部官员纳撒尼尔·卡勒给推特公共政策团队发了一个表格，包含52个阿拉伯语账号，要求优先服务其中6个，其中一个专门用来宣传美国无人机对也门的军事袭击，例如袭击是精确的，杀死的是恐怖分子而不是平民。按照卡勒要求，推特将这批阿拉伯语账号放入“白名单”，用来放大某些信息。
+
+美国政府严格审查所有社交媒体公司，要求执行政府指示。福克斯商业频道报道，2022年12月27日，推特公司首席执行官马斯克表示，所有社交媒体平台都与美国政府合作，对内容进行审查。美国的舆论导向受到政府干预，限制所有不利言论。谷歌经常让链接页面消失。
+
+美国国防部操控社交媒体。2022年12月，美国独立调查网站“The Intercept”披露，2017年7月美军中央司令部官员纳撒尼尔·卡勒给推特公共政策团队发了一个表格，包含52个阿拉伯语账号，要求优先服务其中6个，其中一个专门用来宣传美国无人机对也门的军事袭击，例如袭击是精确的，杀死的是恐怖分子而不是平民。按照卡勒要求，推特将这批阿拉伯语账号放入“白名单”，用来放大某些信息。
 + 美国奉行双重新闻自由标准，粗暴打压他国媒体。通过种种手段让别国媒体“消音”。今日俄罗斯电视台、卫星通讯社等俄主流媒体纷纷被美欧禁止落地；俄罗斯官方账号被推特、脸书、优兔等平台公开限流；俄罗斯频道和应用程序被奈飞、苹果、谷歌应用商店等直接下架；涉俄内容遭到史无前例的严格审查。
 + 美国滥用文化霸权对社会主义国家“和平演变”。建立起专门针对社会主义国家的新闻媒体和文化传媒机构。而美国扶植的负责意识形态渗透的电台、电视网由政府提供巨额经费，用数十种语言文字，昼夜不停地对社会主义国家煽动宣传。
-  美国将虚假信息作为攻击他国的工具，已形成“黑金、黑论、黑嘴”舆论产业链条。为一些团体和个人源源不断提供“黑金”，支持其炮制“黑论”，以此影响国际舆论。
+
+美国将虚假信息作为攻击他国的工具，已形成“黑金、黑论、黑嘴”舆论产业链条。为一些团体和个人源源不断提供“黑金”，支持其炮制“黑论”，以此影响国际舆论。
 
 <h4 id='c6'>结束语</h4>
 
 得道多助，失道寡助。恃强凌弱、巧取豪夺、零和博弈等霸权霸道霸凌行径危害深重，和平、发展、合作、共赢的历史潮流不可阻挡。美国以强权挑战真理，以私利践踏正义。这些单边主义、唯我独尊、倒行逆施的霸权做法正在引发国际社会越来越强烈的批评和反对。
+
 国与国之间要相互尊重、平等相待。大国应该有大国的样子，更要带头走出一条对话而不对抗、结伴而不结盟的国际交往新路。中国一贯反对一切形式的霸权主义和强权政治，反对干涉别国内政。美国应该反躬自省，深刻检视自己的所作所为，放弃傲慢与偏见，摒弃霸权霸道霸凌。
 
-### 来源：新华社
+`来源：新华社`
