--- a/全球安全倡议概念文件.md
+++ b/全球安全倡议概念文件.md
@@ -1,5 +1,5 @@
 <h2>全球安全倡议概念文件</h2>
-
+新华社，北京，2023年2月18日
 <h4>一、背景</h4>
 安全问题事关各国人民的福祉，事关世界和平与发展的崇高事业，事关人类的前途命运。
 
@@ -86,3 +86,4 @@
 
 全球安全倡议秉持开放包容原则，欢迎和期待各方参与，共同丰富倡议内涵，积极探索开展新形式新领域合作。中方愿同世界上所有爱好和平、追求幸福的国家和人民携手同行，协力应对各种传统和非传统安全挑战，并肩守护地球家园的和平安宁，共同开创人类更加美好的未来，让和平的薪火代代相传、平安的钟声响彻人间。
 
+`来源：新华社`
