--- a/如何走出独立自主、安全可控、创新合作的能源转型道路--王孟源.md
+++ b/如何走出独立自主、安全可控、创新合作的能源转型道路--王孟源.md
@@ -12,13 +12,13 @@
 
 相对的，西方金融的赚钱秘诀恰恰是创造信息不对称，然后用信息不对称来谋取暴利。这其实是西方金融向全世界榨取劳动成果的重要手段。气候变化当然是一个真实的全球性危机，限制碳排放也是有真实需要的世界性问题。但在推动相关政策的时候必须要考虑与西方合作的现实，了解和规避与欧美合作过程中的陷阱：
 
-** 第一个陷阱，是美国国内的政治共识优先级：第一优先是伤害中国，第二优先是再工业化，第三优先才是处理气候变化。
+* 第一个陷阱，是美国国内的政治共识优先级：第一优先是伤害中国，第二优先是再工业化，第三优先才是处理气候变化。
 
-** 第二个陷阱，是美西方所谓基于规则的国际秩序，所谓规则就是美国说了算。
+* 第二个陷阱，是美西方所谓基于规则的国际秩序，所谓规则就是美国说了算。
 
-** 第三个陷阱，是美国在同一个总统任期内都可能政策反复，总统轮替的时候更是如此。所以近期中国与美国签订协议、开展合作，要做好到2025年作废的准备。
+* 第三个陷阱，是美国在同一个总统任期内都可能政策反复，总统轮替的时候更是如此。所以近期中国与美国签订协议、开展合作，要做好到2025年作废的准备。
 
-** 第四个陷阱，是作弊。温室气体排放主要依靠企业报数。一旦出现新的监测技术，就能发现严重的西方企业作弊现象。
+* 第四个陷阱，是作弊。温室气体排放主要依靠企业报数。一旦出现新的监测技术，就能发现严重的西方企业作弊现象。
 比如2015年，发现大众汽车的氮氧化合物实际监测排放是其报送量的15倍，事后仅罚款了事。又比如2020年，欧盟发射了世界上第一颗甲烷（天然气）监测卫星，发现全球甲烷排放前三的美国、俄罗斯和中东地区全都谎报了排放量。其中最严重的是美国，只报了实际甲烷排放的三分之一。因为只有欧盟这一个监测举证，美国至今没有更正谎报额。
 试想如果中国与这样的美国接轨合作，美国祇报三分之一，我们是跟着一起作弊，还是根据实数开展合作，以达到推动产业升级、绿色低碳减排的目的呢？ 如果根据实数，我们的国际压力又会陡增。
 
@@ -26,16 +26,16 @@
 
 ## 从技术层面而言，我们需要警惕几个方面：
 
-** 一是碳回收的技术逻辑违反热力学第二定律，可以说是21世纪的永动机，是彻头彻尾的骗局。
+* 一是碳回收的技术逻辑违反热力学第二定律，可以说是21世纪的永动机，是彻头彻尾的骗局。
 只不过美国资本市场可以用这个概念来圈钱，所以引导大众媒体去追捧。中国没有必要接受来自美国的假讯息。
 
-** 二是碳交易、碳补偿的基础在于碳核算。
+* 二是碳交易、碳补偿的基础在于碳核算。
 温室气体排放先天是公地悲剧，核算过程很容易作弊，所以真正的难点、真正的资源投入重点在于碳核算。这一领域的市场运作只有在政府监管到位的情况下才会有效，需要考虑成本收益，谨慎市场化。特别要防止核算监督成本由政府承担、最后由金融机构炒作交易赚钱的情况。
 
-** 三是考虑不同清洁能源的全面成本。
+* 三是考虑不同清洁能源的全面成本。
 中国目前的发电量有28.7%是零碳排放或近零碳排放。按装机分类为核电、水电、风能和光伏四大类。核电装机量最少，风能、光能装机量都高达400吉瓦。但从实际年发电量考虑，核电可以实现一天24小时、365天连续发电; 水电平均每天发电8小时; 风电每天发电6小时; 光伏每天发电2小时。只有核能可以全天持续发电; 水电虽然受枯汛期影响，但在同一天里，可以根据用电需求决定发电或储能。因此在计算清洁能源成本、进行技术选择时，不能只考虑装机成本或者发电容量直接成本，而是要考虑发电容量的综合成本。
 
-** 四是高度重视储能技术选择。
+* 四是高度重视储能技术选择。
 目前全球最大的锂电池生产商在中国，锂电储能技术已趋于成熟。但存在成本高、生命周期短的问题。
 例如车用锂电池通常只能充放电500-1000次，不能满足工业储能的需要。磷酸铁锂电池、钠离子电池的循环使用周期比传统锂电池长，但也只达到充放电1000多次，仍然低于工业利用的实际需求，成本也依旧过高。大量投资进入的氢能领域，资本对其的热炒始于欧盟。
 欧盟的能源公司难以在现有新能源领域有所作为，唯一有比较优势是与氢能相关的石油化工技术，于是收买传媒，大搞公关，游说欧盟将氢能确定为未来的新储能技术。但氢能要产业化需要解决物理性问题，可以说是无解的，在十年之内无法工业化。
